# bruneton-sky-model

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  atmosphere_model.cpp  atmosphere_model.h  constants.h  main.cpp  texture_buffer.cpp  texture_buffer.h
src/shader/: ComputeDirectIrradiance_cs.glsl  clear_2d_cs.glsl  clear_3d_cs.glsl  compute_direct_irradiance_cs.glsl  compute_indirect_irradiance_cs.glsl  compute_multiple_scattering_cs.glsl  compute_scattering_density_cs.glsl  compute_single_scattering_cs.glsl  compute_transmittance_cs.glsl  constants.glsl  cubemap_fs.glsl  cubemap_vs.glsl  demo_fs.glsl  demo_vs.glsl  irradiance_functions.glsl  mesh_fs.glsl  mesh_vs.glsl  reflection_map_fs.glsl  reflection_map_vs.glsl  rendering_functions.glsl  scattering_functions.glsl  transmittance_functions.glsl  uniforms.glsl  utility.glsl
